Added read next animation to articles

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -424,12 +424,39 @@
 		<p> Contentiously, perhaps, we also propose that we need to object to sustaining everything. Design would be better off rejecting sustainability and concentrating on finding ways of us being together on such a populous planet in such unprecedented proximity staring at many other major crises. As such, design now needs to disrupt, contest, invent, direct, coordinate, respond, provoke and project.</p>
 		<p span id="lastparagraph">The complex and interdependent issues we face today need undisciplined and irresponsible designers who act in productively irresponsible ways. With that stated, we must also endeavor to design with care and remember that, like design, the purpose of care is to affect positively the way we live. Finally, designers need to confront what most of them avoid—the past—and also accept that if design no longer needs an idea, should design still participate in the idea of design?</p>
 	</section>
-
-	<section class="readnext">
-			<h3 span id="readnexttext">Read previous</h3>
-			<a href="../article-factory/index.html"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
-		</section>
 	</section>
 			</article>
+			<div class="headcontainer">
+				<div class="readnextanimated">
+					<div class="headertext">
+						<div class="crimetext">
+					<div class="nexttext">
+						<h1 class="readnexttext">&nbsp;&nbsp;&nbsp;Read next</h1>
+					</div>
+					</div>
+					<div class="factorytext">
+					<div class="factory">
+						<h1 class="settingstextblue">&nbsp;&nbsp;&nbsp;&nbsp;Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+						<h1 class="settingstextblue">Crime</h1>
+						<h1 class="settingsanimatedtext">Design &</h1>
+					</div>
+					</div>
+					</div>
+				</div>
 	</body>
 </html>
