--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -236,24 +236,24 @@
 					</div>
 					<div class="factorytext">
 					<div class="factory">
-						<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;&nbsp;Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
-						<h1 class="factoryanimatedtextyellow">Crime</h1>
-						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="settingstextblue">&nbsp;&nbsp;&nbsp;&nbsp;Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
+						<h1 class="settingstextblue">Discipline</h1>
+						<h1 class="settingsanimatedtext">Design</h1>
 					</div>
 					</div>
 					</div>
