added link to the read next for discipline

--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -95,8 +95,8 @@
 			<div id="navbar">
 				<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
 				<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink">Crime</a>
-				<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink">Factory</a>
-				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink"><mark>Discipline</mark></a>
+				<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
+				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink">Discipline</a>
 				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
 			</div>
@@ -235,6 +235,7 @@
 					</div>
 					</div>
 					<div class="factorytext">
+					<a href="https://bulganbee.github.io/binding/article-discipline/index.html">
 					<div class="factory">
 						<h1 class="settingstextblue">&nbsp;&nbsp;&nbsp;&nbsp;Discipline</h1>
 						<h1 class="settingsanimatedtext">Design</h1>
@@ -255,6 +256,7 @@
 						<h1 class="settingstextblue">Discipline</h1>
 						<h1 class="settingsanimatedtext">Design</h1>
 					</div>
+				</a>
 					</div>
 					</div>
 				</div>
