Added links to the read next

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -435,6 +435,7 @@
 					</div>
 					</div>
 					<div class="factorytext">
+						<a href="https://bulganbee.github.io/binding/article-crime/index.html">
 					<div class="factory">
 						<h1 class="settingstextblue">&nbsp;&nbsp;&nbsp;&nbsp;Crime</h1>
 						<h1 class="settingsanimatedtext">Design &</h1>
@@ -455,6 +456,7 @@
 						<h1 class="settingstextblue">Crime</h1>
 						<h1 class="settingsanimatedtext">Design &</h1>
 					</div>
+				</a>
 					</div>
 					</div>
 				</div>
