--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -144,6 +144,7 @@
 					</div>
 					</div>
 					<div class="factorytext">
+					<a href="https://bulganbee.github.io/binding/article-factory/index.html">
 					<div class="factory">
 						<h1 class="settingstextblue">&nbsp;&nbsp;&nbsp;&nbsp;Factory</h1>
 						<h1 class="settingsanimatedtext">Settings</h1>
@@ -164,6 +165,7 @@
 						<h1 class="settingstextblue">Factory</h1>
 						<h1 class="settingsanimatedtext">Settings</h1>
 					</div>
+					</a>
 					</div>
 					</div>
 				</div>
