--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -128,11 +128,27 @@
 				<p class="bigtext1">In a typically pithy statement of 1912 Kraus would call this lack of distinction, which precludes “all future living and striving,” a lack of “running-room”.</p>
 				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room <i>[Spielraum]</i>. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p>
 				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <i>Fountain</i>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things: they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture.</p>
-				<p class="footnote"><sup>1</sup> Adolf Loos, “Ornament and Crime”, <i>Les Cahiers d'aujourd'hui,</i> 1913.</p>
-				<p class="footnote"><sup>2</sup> Adolf Loos, “The Poor Little Rich Man,” <i>Neues Wiener Tagblatt</i>, 1900.</p>
 			</section>
 			<section class="normal">
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
+				<div class="citationdiv">
+					<details class="citation-div">
+					  <summary>
+						<div id="footnotediv">
+						  <a>Footnotes</a>
+						  <a id="arrow-foot">&#8595;</a>
+						</div>
+					  </summary>
+					  <ul class="citation-list">
+						<li class="footnote-item">
+							<p class="footnote"><sup>1</sup> Adolf Loos, “Ornament and Crime”, <i>Les Cahiers d'aujourd'hui,</i> 1913.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>2</sup> Adolf Loos, “The Poor Little Rich Man,” <i>Neues Wiener Tagblatt</i>, 1900.</p>
+						</li>
+						</ul>
+						</details>
+						</div>
 			</section>
 			</article>
 			<div class="headcontainer">
