--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -104,45 +104,20 @@
 	 <article>
 		<section>
 			<div class="quote">
-				<p class="bigtext1">“Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be <mark>designers in society and in relation to capital</mark>,”</p>
-				<p class="subparagraph">writes designer Jacob Lindgren.</p>
+				<p class="bigtext1" id="first">“Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be <mark>designers in society and in relation to capital</mark>,”</p>
+				<p class="subparagraph" id="whosaidit">writes designer Jacob Lindgren.</p>
 			</div>
 			<section>
 				<p>“A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.”</p>
-				<p> In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</p>
+				<p> <mark id="markblack">In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</mark></p>
 				<p>In his book of essays, The Shape of Things, Czech philosopher and media critic Vilém Flusser argues that factories are decreasingly places where goods are produced and increasingly places where new kinds of humans are produced. Flusser viewed factories as the primary vessels and sites for agendas of progress and ideology, ones that instead of manufacturing solely goods also produced new kinds of subjects, writing that</p>
-				<p class="bigtext1">- “human history is the history of manufacturing and everything else is mere footnotes.”<sup>1</sup></p>
-				<p class="footnote"><sup>1</sup> Vilém Flusser,<i>The Shape of Things</i> , (London: Reaktion Books, 1999), 44.</p>
+				<p class="bigtext1">- “<mark>human history is the history of manufacturing</mark> and everything else is mere footnotes.”<sup>1</sup></p>
 			</section>
 		<section class="normal">
 				<p> In an article titled “The Critical Crisis of Science,” Flusser describes a similar tautology: “Science has become automated and has transformed scientists into its own tools.”<sup>2</sup> For Flusser, learning was analogous to manufacturing: both being processes which are based on acquiring, producing and passing on—or “turning”—information.</p>
 				<p class="bigtext1">“It becomes apparent that the factory is nothing but an applied school and the school nothing but a factory for the acquisition of information.”<sup>3</sup></p>
-				<p class="footnote"><sup>2</sup> “The Critical Crisis of Science,’” in the review <i>Revista Brasileira de Filosofia (Brazilian Review of Philosophy)</i> in 1964.</p>
-				<p class="footnote"><sup>3</sup> Vilém Flusser,<i> The Shape of Things,</i> (London: Reaktion Books, 1999), 49.</p>
-				<p class="footnote"><sup>4</sup> Walter Gropius, “Bauhaus Manifesto and Program” (1919).</p>
-				<p class="footnote"><sup>5</sup> KarlHeinz Hüter, <i>Das Bauhaus in Weimar</i>, Akademie Verlag, Berlin, 1976, 11.</p>
-				<p class="footnote"><sup>6</sup> Nicholas Fox Weber, “Deadly Style: Bauhaus’s Nazi Connection,” <i>New York Times,</i> December 23, 2009.</p>
-				<p class="footnote"><sup>6</sup> Daniel Talesnik, “The Itinerant Red Bauhaus, or the Third Emigration,” <i>ABE Journal,</i> online since October 5, 2017, connection on 12 July 2019.</p>
-				<p class="footnote"><sup>7</sup> Sharon Rotbard, <i>White City, Black City: Architecture and War in Tel Aviv and Jaffa</i> by (Cambridge: MIT Press, 2015).</p>
-				<p class="footnote"><sup>8</sup> Tom Dyckhoff, “Mies and the Nazis,” <i>The Guardian</i>, November 30, 2002 (accessed January 10, 2019).</p>
-				<p class="footnote"><sup>9</sup> Marc Wortman, “Famed Architect Philip Johnson’s Hidden Nazi Past,” <i>Vanity Fair</i>, April, 2016.</p>
-				<p class="footnote"><sup>10</sup> Ibid.</p>
-				<p class="footnote"><sup>11</sup> Ibid.</p>
-				<p class="footnote"><sup>12</sup> IIT Institute of Design, “The New Bauhaus,” id.iit.edu (accessed January 10, 2019).</p>
-				<p class="footnote"><sup>13</sup> Moholy-Nagy Foundation, “Institute of Design: A Brief History by Hattula Moholy-Nagy, moholy-nagy.org.</p>
-				<p class="footnote"><sup>14</sup> Julie Jones, “Putting the European Avant-garde to Work for Capitalism,” Société Française de Photographie, 2009.</p>
-				<p class="footnote"><sup>15</sup> Sibyl Moholy-Nagy, <i>Moholy-Nagy: Experiment in Totality</i>, 1969.</p>
-				<p class="footnote"><sup>16</sup> Ibid.</p>
-				<p class="footnote"><sup>17</sup> Dexter Sinister, “Towards a Critical Faculty, Dexter Sinister” (pdf), dextersinister.org</p>
-				<p class="footnote"><sup>18</sup> Savvy Contemporary SPINNING TRIANGLES: Ignition of a School of Design, savvy-contemporary.com, 2019.</p>
-				<p class="footnote"><sup>19</sup> Ibid.</p>
-				<p class="footnote"><sup>20</sup> Parallel School Berlin, “LETTER TO THE ACADEMY,” in Extra-curricular, ed. Jacob Lindgren (Eindhoven: Onomatopee, 2018), 17.</p>
-				<p class="footnote"><sup>21</sup> Parallel School Berlin, Workshop Journal (pdf), October 5, 2013.</p>
-				<p class="footnote"><sup>22</sup> The Perversions of the Bauhaus’s talk by Mark Wigley during the “How political is the Bauhaus?” symposium at HKW.</p>
-				<p class="footnote"><sup>23</sup> “More on Power/Knowledge,” <i>The Spivak Reader</i> (London: Routledge, 1996), 143, 151.</p>
-				<p class="footnote"><sup>24</sup> Flusser, <i>The Shape of Things</i>, 44.</p>
-				<p class="footnote"><sup>25</sup> Klaus Gronenborn’s synopsis of Harun Farocki’s <i>Workers Leaving the Factory</i>.</p>
-		
+
+
 			<section class="withbackground">
 				<p>These insights shed light on design education today. Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be designers in society and in relation to capital. A school becomes a factory producing designers, one that, in keeping with the principles of “good design,” turns them into efficient and interchangeable parts ready to hit the market. Like a spinning ouroboros —a snake swallowing its own tail—educational institutions pursue what the market requires (a response to capital’s demand for cheap, standardized, and predictable parts), molding future designers into interchangeable units. To what extent has this cycle, an entanglement of design and industry, come to be considered graphic design’s “factory settings”—a kind of default, inherent, and out of the box approach to how its practice, pedagogy, and history have formed and are enacted?</p>
 			</section>
@@ -224,6 +199,90 @@
 				<p>Rather, in what way can these same motivations, material articulations, and intentions—ones informed by industry and existing to service capital at the expense of destroying bodies and the planet—be reverse engineered and reconfigured for completely different ends, such as the above-mentioned ones?</p>
 				<p class="important">To end where we began: Vilém Flusser described the factory’s mode of production as “turning,” in that manufacturing is “turning what is available in the environment to one’s own advantage, turning it into something manufactured, turning it over to use and thus turning it to account.”<sup>25</sup></p>
 				<p>A long-standing mystery surrounding the Workings Leaving the Factory film is where exactly the workers are headed as they exit through the factory’s front gates. (“To a meeting? To the barricades? Or simply home?”).26 If the school is a factory, and the educational turn allows us to examine the conditions of our own manufacturing, or our “turning” as Flusser puts it—as we exit, where should we turn?</p>
+				<div class="citationdiv">
+					<details class="citation-div">
+					  <summary>
+						<div id="footnotediv">
+						  <a>Footnotes</a>
+						  <a id="arrow-foot">&#8595;</a>
+						</div>
+					  </summary>
+					  <ul class="citation-list">
+						<li class="footnote-item">
+							<p class="footnote"><sup>1</sup> Vilém Flusser,<i>The Shape of Things</i> , (London: Reaktion Books, 1999), 44.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>2</sup> “The Critical Crisis of Science,’” in the review <i>Revista Brasileira de Filosofia (Brazilian Review of Philosophy)</i> in 1964.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>3</sup> Vilém Flusser,<i> The Shape of Things,</i> (London: Reaktion Books, 1999), 49.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>4</sup> Walter Gropius, “Bauhaus Manifesto and Program” (1919).</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>5</sup> KarlHeinz Hüter, <i>Das Bauhaus in Weimar</i>, Akademie Verlag, Berlin, 1976, 11.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>6</sup> Nicholas Fox Weber, “Deadly Style: Bauhaus’s Nazi Connection,” <i>New York Times,</i> December 23, 2009.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>7</sup> Sharon Rotbard, <i>White City, Black City: Architecture and War in Tel Aviv and Jaffa</i> by (Cambridge: MIT Press, 2015).</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>8</sup> Tom Dyckhoff, “Mies and the Nazis,” <i>The Guardian</i>, November 30, 2002 (accessed January 10, 2019).</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>9</sup> Marc Wortman, “Famed Architect Philip Johnson’s Hidden Nazi Past,” <i>Vanity Fair</i>, April, 2016.</p>
+						<li class="footnote-item">
+							<p class="footnote"><sup>10</sup> Ibid.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>11</sup> Ibid.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>12</sup> IIT Institute of Design, “The New Bauhaus,” id.iit.edu (accessed January 10, 2019).</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>13</sup> Moholy-Nagy Foundation, “Institute of Design: A Brief History by Hattula Moholy-Nagy, moholy-nagy.org.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>14</sup> Julie Jones, “Putting the European Avant-garde to Work for Capitalism,” Société Française de Photographie, 2009.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>15</sup> Sibyl Moholy-Nagy, <i>Moholy-Nagy: Experiment in Totality</i>, 1969.</p>
+						<li class="footnote-item">
+							<p class="footnote"><sup>16</sup> Ibid.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>17</sup> Dexter Sinister, “Towards a Critical Faculty, Dexter Sinister” (pdf), dextersinister.org</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>18</sup> Savvy Contemporary SPINNING TRIANGLES: Ignition of a School of Design, savvy-contemporary.com, 2019.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>19</sup> Ibid.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>20</sup> Parallel School Berlin, “LETTER TO THE ACADEMY,” in Extra-curricular, ed. Jacob Lindgren (Eindhoven: Onomatopee, 2018), 17.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>21</sup> Parallel School Berlin, Workshop Journal (pdf), October 5, 2013.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>22</sup> The Perversions of the Bauhaus’s talk by Mark Wigley during the “How political is the Bauhaus?” symposium at HKW.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>23</sup> “More on Power/Knowledge,” <i>The Spivak Reader</i> (London: Routledge, 1996), 143, 151.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>24</sup> Flusser, <i>The Shape of Things</i>, 44.</p>
+						</li>
+						<li class="footnote-item">
+							<p class="footnote"><sup>25</sup> Klaus Gronenborn’s synopsis of Harun Farocki’s <i>Workers Leaving the Factory</i>.</p>
+						</li>
+						</details>
+					</div>
 			</section>
 			</article>
 			<div class="headcontainer">
