edited discipline article

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -112,7 +112,7 @@
 			<p class="bigtext1">The fragmentation of distinct disciplines has shifted creative practice from being <mark>‘discipline-based’ to ‘issue- or project-based</mark>.’<sup>6</sup></p>
 			<p>Consequently, this paper presents a manifesto for the future design discipline that emphasizes disposing carefully of what you know, teaching what you do not know whilst always taking design seriously, protecting us from what we want, objecting to sustaining everything, designing without reproach, ensuring that objects are invisible but designed with care and within history whilst exploring design as an idea rather than an ideal.</p>
 		  </div>
-		
+		<div class="citationandmore">
 			<div class="citationdiv">
 				<details class="citation-div">
 				  <summary>
@@ -144,6 +144,7 @@
 				</div>
 			<div class="notediv"><p class="noteparagraph">The edges between product design and service design, for example, continue to be increasingly fuzzy</p></div>
 		</div>
+	</div>
 		  </div>
 		</section>
 			<section>
@@ -212,11 +213,12 @@
 			</div>
 		</section>
 	<section class="normal">
-	<div class="stickytitle"><h3>An Alternative Disciplinary <span id="subtitle-alternative">(‘Alterplinary’) Future Manifesto</span></h3></div>
-			<p class="topspace">As a way forward for the discipline of design, the authors propose an ‘alterplinary’manifesto (a portmanteau of ‘alternative’ and ‘disciplinary’). Alterplinarity is the condition contemporary design finds itself in.<sup>17</sup> The fluid, evolving muddle of practice that regularly cross, exceed and alter historical disciplinary and conceptual boundaries has resulted in research, education, and practice that is constantly shifting, creating, contesting and negotiating new terrains of opportunities and re-shaping the boundaries of design.</p>
+	<div class="stickytitle"><h3>An Alternative Disciplinary (‘Alterplinary’) Future Manifesto</span></h3></div>
+	<div class="paragraphs">
+	<p>As a way forward for the discipline of design, the authors propose an ‘alterplinary’manifesto (a portmanteau of ‘alternative’ and ‘disciplinary’). Alterplinarity is the condition contemporary design finds itself in.<sup>17</sup> The fluid, evolving muddle of practice that regularly cross, exceed and alter historical disciplinary and conceptual boundaries has resulted in research, education, and practice that is constantly shifting, creating, contesting and negotiating new terrains of opportunities and re-shaping the boundaries of design.</p>
 			<p class="bigtext1">This “other” dimension<sup>18</sup> or, as we propose, an “alternative disciplinarity”—an “alterplinarity” that does not rely on historic disciplines of design as the boundaries of our understanding has been superseded.</p>
 			<p>The digital has modified the models of design thought and action, and, as a result, research and practice should transform from a convention domesticated by the academy to a reaction to globalization that is yet to be disciplined.</p>
-
+</div>
 			<details class="citation-div"> <summary><div id="footnotediv"><a>Alternative: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
 				<ul class="citation-list">  
 					<li class="footnotes-list">
