--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -154,7 +154,7 @@
 					<div class="paragraphs">
 			<p class="topspace">Since the 1950s, the adoption and application of the word design has been expanding continuously both in type and remit, and now extends from the design of objects and spaces that we use daily to cities, landscapes, nations, cultures, bodies, genes, political systems, and the way we produce food, to the way we travel, build cars and clone sheep.<sup>7</sup> The reach of design has expanded way beyond Ernesto Rogers’ description from “... from the Spoon to the City” (“... dalla cucchiaio alla citta”)<sup>8</sup> to the way we formulate business and, more recently, think.<sup>9</sup></p>
 			<p>With accelerated design activity anticipated well into the 21st century, it is clear that an increasing number of researchers and practitioners across a diverse range of creative and other disciplines routinely regard their methods as rooted in design practice or are using methods, techniques and approaches that could be considered “designerly.”<sup>10</sup> It is equally clear that design is expanding its disciplinary, conceptual, theoretical, and methodological frameworks to encompass ever-wider disciplines, activities and practice.</p>
-			<p class="bigtext1">As a result, design is either copious and being smeared as a viscous layer over the problems of the world, or what we call design is being stretched into an impermeable film expanding to keep in capital and consumption.</p>
+			<p class="bigtext1">As a result, <mark>design is either copious and being smeared as a viscous layer over the problems of the world</mark>, or what we call design is being stretched into an impermeable film expanding to keep in capital and consumption.</p>
 			<p class="important">The boundaries of what were once recognized as discrete design disciplines such as product, graphic, textile, and fashion design have been and continue to dissolve.<sup>11</sup></p>
 			<p>Key amongst these changes is the realization that an indeterminacy of professional boundaries now exists, and fluid patterns of employment within and between traditional design disciplines is commonplace. Moreover, many modern day design pursuits have a core of designerly activity backed by other subject specialist areas such as fine art, engineering, anthropology, computer science and business. The edges between product design and service design, for example, continue to be increasingly fuzzy. Mobile phone companies now offer more than a mere physical artefact (i.e. a phone), rather, they now regularly offer users the opportunities to subscribe to their services comprised of music and video downloads, among many others.</p>
 			<p>Similarly, the work of design companies and designers such as Hella Jongerius,<sup>12</sup> Ronan and Erwan Bouroullec,<sup>13</sup> Marti Guixe<sup>14</sup> and IDEO<sup>15</sup> now all regularly transcend historical disciplinary frameworks such as interior design, fine art, product design, and graphic design.</p>
@@ -164,6 +164,7 @@
 			<p>Now the idea of design includes multiple disciplinary perspectives (i.e. multidisciplinarity) to cross-disciplinary pursuits, to the get-together of interdisciplinarity to the bricolage of transdisciplinarity and now beyond—to alter-disciplinarity, where globalization and the explosion of digital possibilities has resulted in connections that are no longer ‘in the middle of ...,’ cannot be measured ‘across,’ nor encompass an ‘entire system.’ As such, the digital has generated an ‘other’ dimension, so we might now need to consider ‘alter-disciplinarity’ or ‘undisciplinarity’ as the most effective approach in the research required for a future of design.</p>
 			</div>
 			 <!-- Right Content -->
+			 <div class="citationandmore">
 			 <div class="citationdiv">
 				<details class="citation-div">
 				  <summary>
@@ -210,7 +211,11 @@
 					</li>
 				</details>
 			</div>
+			<div class="notediv"><p class="noteparagraph" id="noteparapurple">Key amongst these changes is the realization that an indeterminacy of professional boundaries now exists, and fluid patterns of employment within and between traditional design disciplines is commonplace.</p></div>
 			</div>
+		
+		</div>
+	
 		</section>
 	<section class="normal">
 	<div class="stickytitle"><h3>An Alternative Disciplinary (‘Alterplinary’) Future Manifesto</span></h3></div>
